2007-07-02 Yusei
* Fixed a invalid xhtml template.

2007-06-12 JPS
* Added MochiKit by default to handle onload events

2007-01-11 Kevin
* Fix widget alignment in bottom fieldset.

2006-09-14 Aurel
* fix removeUnpickableObject in Base_callDialogMethod to take listbox into account

2006-09-13 Kevin
* Fix developper mode rendering bug.
* erp5.js is needed in web mode by admin toolbox which display context_box_render.
* Split context macro in more macros.

2006-09-12 Kevin
* Refactor login_form screen to match new xhtml style form structure.

2006-09-08 Kevin
* Don't display action box in default web view and factorize conditions.

2006-09-07 jerome
* fix <title>s

2006-09-07 Kevin
* Render field CSS classes on the div.field instead on the label for better styling.
* Fix JP "missing" statement.

2006-09-04 Kevin
* Don't render non-editable fields in span.

2006-09-01 Kevin
* Fix hidden developper shortcuts.
* Add support for title _and_ id on groups (see form_render and ERP5XhtmlStyle_getFormGroupTitleAndId comments for details).

2006-08-31 Kevin
* Render non editable field in a span.
* Display edit tabs in web editable_mode.

2006-08-29 Chris
* Added an easy way to customize erp5 using new CSS/JS files. You just need to redefine ERP5Site_getCSSList and ERP5Site_getJSList to return your new files too.

2006-08-29 Kevin
* erp5.css and erp5.js are not authoritative over others CSS and JS (this let let user override default CSS and JS definitions).

2006-08-28 Kevin
* Test form accessibility earlier in developper_shortcut_render to let login_form be rendered in erp5_web when anonymous.
* Try to get form from 'form' variable before 'current_form_id'.

2006-08-28 JP
* Trash widget_render. field_render should be used instead.

2006-08-25 Kevin
* Move hidden input and globals definition code to separate file.
* Move planning box generic header stuff to global_definition.
* Only add default erp5 javascript and css file if we are not in web mode.