@@ -1,3 +1,6 @@
+2007-08-18 yo
+* ERP5Site does not have getPortalType, so avoid calling getPortalType if not present.
+
 2007-07-02 Yusei
 * Fixed a invalid xhtml template.
 
